--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ gradle-app.setting
 
 # Cache of project
 .gradletasknamecache
+.idea
+gradle
+build
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
