--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ dependencies {
     testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '5.2.0'
     testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
+    // https://mvnrepository.com/artifact/com.github.javafaker/javafaker
+    implementation group: 'com.github.javafaker', name: 'javafaker', version: '1.0.2'
+
 
 }
 
