--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,11 @@
-plugins {
-    id 'java'
+buildscript {
+    repositories {
+        jcenter()
+    }
+
 }
+
+apply plugin: 'java'
 
 group 'org.example'
 version '1.0-SNAPSHOT'
@@ -11,16 +16,19 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testImplementation 'org.testng:testng:7.1.0'
+    testImplementation 'org.testng:testng:7.1.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '5.2.0'
     testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
-    // https://mvnrepository.com/artifact/com.github.javafaker/javafaker
     implementation group: 'com.github.javafaker', name: 'javafaker', version: '1.0.2'
-
 
 }
 
+
+
 test {
     useJUnitPlatform()
+    systemProperties System.getProperties()
 }
